--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,31 @@
 body {
-    background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0);
+}
+
+h1,
+p,
+h3 {
+  color: ivory;
+  font-family: "JetBrains Mono", monospace;
 }
 
 .main {
-        text-align: center;
+  text-align: center;
 }
 
 .top-container {
-    background-color: #000000;
-    text-align: center;
-}
-
-.middle-container {
-    background-color: rgb(0, 0, 0);
-    text-align: center;
+  background-color: #000000;
+  text-align: center;
 }
 
 .top-pic {
-    height: 250px;
-    width: 250px;
-    border-style: double;
-    border-color: ivory;
+  height: 250px;
+  width: 250px;
+  border-style: double;
+  border-color: ivory;
 }
 
-h1, p, h3 {
-    color: ivory;
-    font-family: 'JetBrains Mono', monospace;
+.middle-container {
+  background-color: rgb(0, 0, 0);
+  text-align: center;
 }
