--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ h3 {
   font-family: "JetBrains Mono", monospace;
 }
 
-.main {
+.header {
   text-align: center;
 }
 
@@ -21,11 +21,35 @@ h3 {
 .top-pic {
   height: 250px;
   width: 250px;
-  border-style: double;
-  border-color: ivory;
+  border-radius: 50%;
 }
 
-.middle-container {
+img {
+  opacity: 0.9;
+}
+
+img:hover {
+  opacity: 1;
+}
+
+.links {
   background-color: rgb(0, 0, 0);
   text-align: center;
+  font-family: "JetBrains Mono", monospace;
+}
+
+.links a {
+  color: aliceblue;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0px;
+}
+
+.links a {
+  padding: 3px;
+}
+li {
+  margin-bottom: 6px;
 }
